# synthpersona

./: .gitignore  README.md  pyproject.toml
persona/: swe_ai_assistant_2024_persona.json
questionnaires/: agi_job_displacement_global_2035.json  agi_wealth_inequality_revolution_2040.json  ai_companionship_integration_2070.json  ai_tech_stock_sentiment_2025.json  alaska_oil_environment_2025.json  american_conspiracy_theories_2024.json  ancient_egypt_akhenaten_reforms_1340bc.json  asi_existential_dread_2050.json  asi_human_creativity_2060.json  athenian_piety_olympian_gods_430bc.json  british_empire_attitudes_uk_1900.json  camelot_chivalry_quests.json  climate_anxiety_coastal_au_2024.json  code_review_practices_2024.json  cold_war_anxiety_us_1962.json  elderly_rural_japan_2010.json  esports_mental_health_sk_2024.json  factory_automation_china_2025.json  financial_literacy_brazil_students_2024.json  generalized_trust_in_the_salem_witch_trials_1692.json  gentrification_brooklyn_2022.json  genz_social_media_politics_2025.json  german_energy_policy_2025.json  gig_economy_ethics_london_2023.json  greek_underworld_shades.json  health_tech_wearables_2030.json  healthcare_covid_stress_italy_2021.json  heian_japan_courtiers_1000ad.json  high_school_students_italy_2016.json  immigrant_integration_canada_2023.json  inca_commoners_mita_1500ad.json  industrial_revolution_workers_uk_1850.json  mali_empire_scholars_timbuktu_1350ad.json  meaning_of_life_2030.json  millennial_parenting_us_2025.json  moral_dilemmas_global_2045.json  nomadic_values_mongolia_2023.json  (+17 more)
synthpersona/: cli.py  (+3 more)
(+26 files in other folders)
