[project]
name = "synthpersona"
version = "0.1.0"
description = "A toolkit for generating and managing synthetic personas"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Arpan" }]
dependencies = []

[project.scripts]
synthpersona = "synthpersona.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["synthpersona"]

[tool.ty.environment]
python-version = "3.12"

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
